# RD-Achievements-Exhibition

./: .gitignore  README.md  example.env  example.quiz-data.csv  makeqrcode.py  package-lock.json  pyproject.toml  requirements.txt  sync.py  sync2.py  toqrcode.py
supabase/: config.toml
supabase/functions/check/: index.ts
supabase/functions/question/: index.ts
supabase/functions/user/: index.ts
